Finish backend changes, I think
Now just need UX stuff

--- a/client/main.scss
+++ b/client/main.scss
@@ -47,6 +47,20 @@ $vacation-button-border-color: $md-amber-600;
 $vacation-background-color: rgba($md-amber-50, 0.6);
 $vacation-background-color-darker: rgba($md-amber-100, 0.6);
 
+$admin-role-color: $md-deep-orange-500;
+$location-admin-role-color: $md-yellow-500;
+$residency-coordinator-role-color: $md-green-500;
+$chief-role-color: $md-lime-500;
+$fellowship-coordinator-role-color: $md-deep-purple-500;
+$fellowship-admin-role-color: $md-purple-500;
+
+$admin-border-color: $md-deep-orange-900;
+$location-admin-border-color: $md-yellow-900;
+$residency-coordinator-border-color: $md-green-900;
+$chief-border-color: $md-lime-900;
+$fellowship-coordinator-border-color: $md-deep-purple-900;
+$fellowship-admin-border-color: $md-purple-900;
+
 $on-desktop: 768px;
 $medium-desktop: 992px;
 $large-desktop: 1200px;
