--- a/imports/ui/sass/_index.scss
+++ b/imports/ui/sass/_index.scss
@@ -1,8 +1,4 @@
 @import
 	"./base",
 	"./layout",
-	"./layout/home",
-	"./layout/requests",
-	"./layout/accounts-config",
-	"./layout/locations-list",
-	"./layout/users-list";
+	"./layout/index";
