--- a/imports/ui/sass/_layout.scss
+++ b/imports/ui/sass/_layout.scss
@@ -1,17 +1,88 @@
+html {
+	min-height: 100%;
+}
+
 body {
+	display: flex;
+	flex-direction: column;
+	align-items: stretch;
+	align-content: stretch;
+	min-height: 100vh;
+	position: relative;
+
+
+	header {
+		margin-bottom: 0.5em;
+		background-color: $heading-background-color;
+		border-bottom: 1px solid $md-grey-300;
+		box-shadow: 0 0px 5px 0 rgba(0,0,0,0.5);
+		font-size: 1.25em;
+
+		&.Home {
+
+			@media screen and (min-width: $small-mobile) {
+				padding: 1em;
+			}
+
+			@media screen and (min-width: $on-desktop) {
+				font-size: 1.5em;
+			}
+
+			@media screen and (min-width: $medium-desktop) {
+				font-size: 1.75em;
+			}
+
+			@media screen and (min-width: $large-desktop) {
+				font-size: 2em;
+			}
+		}
+
+		h1 {
+			margin-top: 0;
+			font-family: $site-header-font-family;
+			text-align: center;
+			font-size: 2.5em;
+
+			@media screen and (min-width: $on-desktop) {
+				font-size: 3em;
+			}
+
+			.site-header-user-type {
+				font-family: $heading-font-family;
+				display: inline-block;
+				font-size: 0.75em;
+			}
+		}
+	}
+
+	main {
+		flex-grow: 1;
+		display: flex;
+		flex-direction: column;
+		align-items: stretch;
+	}
 
 	footer {
-		text-align: left;
-		margin-left: 1em;
-		margin-right: 1em;
+		margin: 0 1em;
+		display: flex;
+		justify-content: space-between;
+		align-items: flex-end;
+
+		& > a {
+			white-space: nowrap;
+		}
 
 		nav {
-			display: inline-block;
-			float: right;
+			display: flex;
+			flex-wrap: wrap;
+			justify-content: center;
 
 			a {
-				& + a {
-					margin-left: 1em;
+				margin: 0 0.5em;
+				white-space: nowrap;
+
+				&:last-child {
+					margin-right: 0;
 				}
 			}
 		}
