--- a/imports/ui/sass/_layout.scss
+++ b/imports/ui/sass/_layout.scss
@@ -11,7 +11,7 @@ body {
 	position: relative;
 
 
-	header {
+	> header {
 		margin-bottom: 0.5em;
 		background-color: $heading-background-color;
 		border-bottom: 1px solid $md-grey-300;
@@ -19,6 +19,10 @@ body {
 		font-size: 1.25em;
 
 		&.Home {
+
+			&.field-entries {
+				font-size: 0.75em;
+			}
 
 			@media screen and (min-width: $small-mobile) {
 				padding: 1em;
@@ -37,6 +41,29 @@ body {
 			}
 		}
 
+		#site-header-user-type {
+			font-family: $heading-font-family;
+			display: inline-block;
+			font-size: 0.75em;
+			border: none;
+			background: transparent;
+			text-align: right;
+			-webkit-appearance: none;
+			direction: rtl; // Dirty hack but seems to right-align
+
+			&:hover,
+			&:active,
+			&:focus {
+				-webkit-appearance: menulist;
+				border: 1px solid $md-grey-600;
+				direction: ltr;
+			}
+
+			option {
+				direction: ltr;
+			}
+		}
+
 		h1 {
 			margin-top: 0;
 			font-family: $site-header-font-family;
@@ -45,12 +72,6 @@ body {
 
 			@media screen and (min-width: $on-desktop) {
 				font-size: 3em;
-			}
-
-			.site-header-user-type {
-				font-family: $heading-font-family;
-				display: inline-block;
-				font-size: 0.75em;
 			}
 		}
 	}
