--- a/imports/ui/sass/layout/_home.scss
+++ b/imports/ui/sass/layout/_home.scss
@@ -20,20 +20,8 @@
 	}
 
 	&.sick {
-		// background-color: $sick-day-background-color;
 
-		.entry-form {
-
-			.btn-primary {
-				background-color: $sick-day-button-color;
-				border-color: $sick-day-button-border-color;
-
-				&:hover {
-					background-color: $sick-day-button-hover-color;
-				}
-			}
-		}
-
+		.entry-form,
 		.submission-confirmation {
 
 			.btn-primary {
@@ -48,20 +36,8 @@
 	}
 
 	&.iDay {
-		// background-color: $i-day-background-color;
 
-		.entry-form {
-
-			.btn-primary {
-				background-color: $i-day-button-color;
-				border-color: $i-day-button-border-color;
-
-				&:hover {
-					background-color: $i-day-button-hover-color;
-				}
-			}
-		}
-
+		.entry-form,
 		.submission-confirmation {
 
 			.btn-primary {
@@ -76,20 +52,8 @@
 	}
 
 	&.meeting {
-		// background-color: $i-day-background-color;
 
-		.entry-form {
-
-			.btn-primary {
-				background-color: $meeting-button-color;
-				border-color: $meeting-button-border-color;
-
-				&:hover {
-					background-color: $meeting-button-hover-color;
-				}
-			}
-		}
-
+		.entry-form,
 		.submission-confirmation {
 
 			.btn-primary {
@@ -104,20 +68,8 @@
 	}
 
 	&.vacation {
-		// background-color: $i-day-background-color;
 
-		.entry-form {
-
-			.btn-primary {
-				background-color: $vacation-button-color;
-				border-color: $vacation-button-border-color;
-
-				&:hover {
-					background-color: $vacation-button-hover-color;
-				}
-			}
-		}
-
+		.entry-form,
 		.submission-confirmation {
 
 			.btn-primary {
@@ -175,14 +127,14 @@
 		width: 100%;
 		padding: 0 1em;
 		display: flex;
-		justify-content: center;
+		justify-content: space-around;
 		align-items: flex-start;
 		align-content: stretch;
 		flex-wrap: wrap;
 
-		// @media screen and (min-width: $on-desktop) {
-		// 	flex-direction: row;
-		// }
+		@media screen and (min-width: $on-desktop) {
+			justify-content: center;
+		}
 
 		.day-off-buttons {
 			display: flex;
@@ -190,7 +142,7 @@
 			flex-wrap: wrap;
 
 			.day-off-button {
-				margin: 0.5em;
+				margin: 0.35em;
 				font-size: 2em;
 				padding: 0.5em;
 
@@ -282,13 +234,69 @@
 
 		button {
 			font-size: 1.25em;
+			margin: 0 0.5em;
 		}
 
 		p {
 			margin: 1em;
 		}
 
+		label {
+			font-size: 0.75em;
+
+			&#multiple-days-label {
+				font-weight: normal;
+				margin: 0 3em;
+
+				@media screen and (min-width: $on-desktop) {
+					order: 3;
+				}
+
+				input[type="checkbox"] {
+					display: block;
+					width: 1em;
+					height: 1em;
+				}
+			}
+		}
+
+		.on-desktop,
+		.on-mobile {
+
+			input {
+				width: 100%;
+			}
+		}
+
+		.on-desktop {
+			display: none;
+		}
+
+		.on-mobile {
+			width: 100%;
+
+			label {
+				margin: 1em 0 0;
+				font-weight: normal;
+			}
+
+			input {
+				margin-top: 0;
+			}
+		}
+
+		@media screen and (min-width: $on-desktop) {
+			.on-desktop {
+				display: block;
+			}
+
+			.on-mobile {
+				display: none;
+			}
+		}
+
 		.hint {
+			order: 5;
 			margin-top: 2em;
 		}
 
