--- a/imports/ui/sass/_layout.scss
+++ b/imports/ui/sass/_layout.scss
@@ -22,22 +22,29 @@ body {
 
 			&.field-entries {
 				font-size: 0.75em;
+
+				@media screen and (min-width: $small-mobile) {
+					padding: 0.85em;
+				}
 			}
 
 			@media screen and (min-width: $small-mobile) {
 				padding: 1em;
 			}
 
-			@media screen and (min-width: $on-desktop) {
-				font-size: 1.5em;
-			}
+			&,
+			&.field-entries {
+				@media screen and (min-width: $on-desktop) {
+					font-size: 1.5em;
+				}
 
-			@media screen and (min-width: $medium-desktop) {
-				font-size: 1.75em;
-			}
+				@media screen and (min-width: $medium-desktop) {
+					font-size: 1.75em;
+				}
 
-			@media screen and (min-width: $large-desktop) {
-				font-size: 2em;
+				@media screen and (min-width: $large-desktop) {
+					font-size: 2em;
+				}
 			}
 		}
 
@@ -49,14 +56,21 @@ body {
 			background: transparent;
 			text-align: right;
 			-webkit-appearance: none;
+			-moz-appearance: none;
+			-ms-appearance: none;
+			appearance: none;
 			direction: rtl; // Dirty hack but seems to right-align
 
 			&:hover,
 			&:active,
 			&:focus {
 				-webkit-appearance: menulist;
+				-moz-appearance: menulist;
+				-ms-appearance: menulist;
+				appearance: menulist;
 				border: 1px solid $md-grey-600;
 				direction: ltr;
+				text-align: left;
 			}
 
 			option {
