Fix host problem with proxy, some styling

--- a/imports/ui/layouts/main.html
+++ b/imports/ui/layouts/main.html
@@ -5,7 +5,7 @@
 				<option value="resident">Resident</option>
 				<option value="fellow" {{isFellowSelected}}>Fellow</option>
 			</select>
-			Day&nbsp;off reporter
+			<a href="/">Day&nbsp;off reporter</a>
 		</h1>
 	</header>
 	<main class="main {{routeName}}">
