--- a/imports/ui/sass/_layout.scss
+++ b/imports/ui/sass/_layout.scss
@@ -87,6 +87,16 @@ body {
 			@media screen and (min-width: $on-desktop) {
 				font-size: 3em;
 			}
+
+			a {
+
+				&,
+				&:hover,
+				&:active,
+				&:focus {
+					color: inherit;
+				}
+			}
 		}
 	}
 
