Add calendar view, some styling

--- a/client/main.scss
+++ b/client/main.scss
@@ -21,11 +21,11 @@ $button-background-color: $md-blue-grey-500;
 $button-background-hover-color: $md-blue-grey-400;
 $button-text-color: #fff;
 
-$sick-day-button-color: $md-cyan-300;
-$sick-day-button-hover-color: $md-cyan-200;
-$sick-day-button-border-color: $md-cyan-600;
-$sick-day-background-color: rgba($md-cyan-50, 0.6);
-$sick-day-background-color-darker: rgba($md-cyan-100, 0.6);
+$sick-day-button-color: $md-light-blue-300;
+$sick-day-button-hover-color: $md-light-blue-200;
+$sick-day-button-border-color: $md-light-blue-600;
+$sick-day-background-color: rgba($md-light-blue-50, 0.6);
+$sick-day-background-color-darker: rgba($md-light-blue-100, 0.6);
 
 $i-day-button-color: $md-light-green-300;
 $i-day-button-hover-color: $md-light-green-200;
@@ -39,11 +39,11 @@ $meeting-button-border-color: $md-deep-purple-600;
 $meeting-background-color: rgba($md-deep-purple-50, 0.6);
 $meeting-background-color-darker: rgba($md-deep-purple-100, 0.6);
 
-$vacation-button-color: $md-amber-300;
-$vacation-button-hover-color: $md-amber-200;
-$vacation-button-border-color: $md-amber-600;
-$vacation-background-color: rgba($md-amber-50, 0.6);
-$vacation-background-color-darker: rgba($md-amber-100, 0.6);
+$vacation-button-color: $md-orange-300;
+$vacation-button-hover-color: $md-orange-200;
+$vacation-button-border-color: $md-orange-600;
+$vacation-background-color: rgba($md-orange-50, 0.6);
+$vacation-background-color-darker: rgba($md-orange-100, 0.6);
 
 $admin-role-color: $md-deep-orange-500;
 $location-admin-role-color: $md-yellow-500;
