--- a/imports/ui/layouts/main.html
+++ b/imports/ui/layouts/main.html
@@ -41,8 +41,8 @@
 			<a href="/fellowships">Fellowships</a>
 		{{/if}}{{/unless}}
 	{{/if}}
-	{{#unless routeIs "List"}}
-			<a href="/list">Request List</a>
+	{{#unless routeIs "Requests"}}
+			<a href="/requests">Requests</a>
 	{{/unless}}
 			<a href="#" id="logout">Logout</a>
 {{else}}
