--- a/imports/ui/sass/layout/_requests.scss
+++ b/imports/ui/sass/layout/_requests.scss
@@ -62,6 +62,36 @@
 
 .request-details {
 
+	h1 {
+
+		span.label {
+			display: inline-block;
+		}
+
+		span.request-type {
+
+			&.sick {
+				background-color: $sick-day-button-color;
+				border: 1px solid $sick-day-button-border-color;
+			}
+
+			&.iDay {
+				background-color: $i-day-button-color;
+				border: 1px solid $i-day-button-border-color;
+			}
+
+			&.meeting {
+				background-color: $meeting-button-color;
+				border: 1px solid $meeting-button-border-color;
+			}
+
+			&.vacation {
+				background-color: $vacation-button-color;
+				border: 1px solid $vacation-button-border-color;
+			}
+		}
+	}
+
 	.request-details-main {
 		position: relative;
 
@@ -85,6 +115,15 @@
 	}
 
 	.request-details-aside {
+
+		.request-status {
+			font-size: 2em;
+
+			.label {
+				display: block;
+				margin: 1em auto;
+			}
+		}
 
 		.panel {
 
