--- a/imports/ui/sass/layout/_calendar.scss
+++ b/imports/ui/sass/layout/_calendar.scss
@@ -9,7 +9,7 @@
 .calendar-utils {
 	display: flex;
 	flex-direction: row;
-	justify-content: flex-end;
+	justify-content: space-around;
 }
 
 #calendar {
