--- a/imports/ui/sass/layout/_home.scss
+++ b/imports/ui/sass/layout/_home.scss
@@ -193,7 +193,7 @@
 			flex-shrink: 1;
 			max-width: 100%;
 
-			@media screen and (min-width: $small-mobile) {
+			@media screen and (min-width: $medium-mobile) {
 				width: 70%;
 			}
 
