--- a/imports/ui/layouts/main.html
+++ b/imports/ui/layouts/main.html
@@ -3,7 +3,7 @@
 		<h1>
 			<select id="site-header-user-type">
 				<option value="resident">Resident</option>
-				<option value="fellow" {{isFellowSelected}}>Fellow</option>
+				{{!-- <option value="fellow" {{isFellowSelected}}>Fellow</option> --}}
 			</select>
 			<a href="/">Day&nbsp;off reporter</a>
 		</h1>
@@ -23,7 +23,8 @@
 {{#if isFellow}}
 		<a href="//{{residentUrl}}">Resident site</a>
 {{else}}
-		<a href="//{{fellowUrl}}">Fellowship site</a>
+		{{!--<a href="//{{fellowUrl}}">Fellowship site</a>--}}
+		<a></a>
 {{/if}}
 		<nav>
 {{#unless routeIs "Home"}}
