Make changes for fellowships
Need fellowship-specific locations

--- a/imports/ui/sass/layout/_home.scss
+++ b/imports/ui/sass/layout/_home.scss
@@ -260,12 +260,32 @@
 			}
 		}
 
+		fieldset {
+
+			legend {
+				font-weight: bold;
+			}
+		}
+
+		.column {
+			width: 100%;
+			display: flex;
+			flex-direction: column;
+			justify-content: flex-start;
+			align-items: center;
+		}
+
 		.on-desktop,
-		.on-mobile {
+		.on-mobile,
+		.labelled-input {
 
 			input {
 				width: 100%;
 			}
+		}
+
+		.labelled-input + button {
+			margin-top: 1.5em;
 		}
 
 		.on-desktop {
