--- a/imports/ui/templates/locationsList.html
+++ b/imports/ui/templates/locationsList.html
@@ -1,13 +1,26 @@
 <template name="locationsList">
 	<section class="locations-list container">
 		<h1>Locations</h1>
-{{#if locationToEdit}}
-		{{>editLocation location=locationToEdit}}
+{{#if isFellow}}
+	{{#each fellowship in fellowships}}
+			<h2>{{fellowship.name}}</h2>
+		{{#if fellowshipLocationToEdit fellowship._id}}
+			{{>editLocation location=(fellowshipLocationToEdit fellowship._id)}}
+		{{else}}
+			<button type="button" class="btn btn-lg btn-primary" id="add-fellowship-location" data-fellowship="{{fellowship.id}}">Add location</button>
+		{{/if}}
+
+		{{>reactiveTable collection=(fellowshipLocations fellowship._id) settings=(fellowshipLocationsSettings fellowship._id)}}
+	{{/each}}
 {{else}}
+	{{#if locationToEdit}}
+		{{>editLocation location=locationToEdit}}
+	{{else}}
 		<button type="button" class="btn btn-lg btn-primary" id="add-location">Add location</button>
-{{/if}}
+	{{/if}}
 
 		{{>reactiveTable collection=locations settings=locationsSettings}}
+{{/if}}
 	</section>
 </template>
 
