--- a/imports/ui/sass/layout/_home.scss
+++ b/imports/ui/sass/layout/_home.scss
@@ -265,6 +265,14 @@
 			legend {
 				font-weight: bold;
 			}
+
+			.options {
+				width: 100%;
+				display: flex;
+				flex-direction: row;
+				flex-wrap: wrap;
+				justify-content: space-around;
+			}
 		}
 
 		.column {
